--- a/src/Screen/HomeScreen.scss
+++ b/src/Screen/HomeScreen.scss
@@ -13,7 +13,10 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 50%;
+    width: 80%;
+    @media (min-width: 376px) {
+      width: 50%;
+    }
   }
   &__title {
     text-align: center;
@@ -64,28 +67,90 @@
   }
 }
 .with-box-shadow {
-  box-shadow: 0px 4px 10px rgba($color: #000000, $alpha: 0.16);
+  box-shadow: 0px 4px 10px rgba($color: #141428, $alpha: 0.04);
+  border: 1px solid #eeeeee;
 }
 .first__section {
-  margin-top: 210px;
+  margin-top: 150px;
   &__heading {
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
     align-items: center;
     width: 90%;
-    margin: 0 auto 32px auto;
+    margin: 0 auto;
+    @media (min-width: 767px) {
+      flex-direction: row;
+    }
+    // margin: 0 auto 32px auto;
+    h3 {
+      font-size: 30px;
+      color: $black-color;
+      font-weight: bold;
+      margin: 0 0 12px 0;
+    }
+    button {
+      margin-bottom: 14px;
+    }
   }
   .slider-swiper {
-    margin: 1rem auto;
+    margin-bottom: 122px;
+    padding: 0px 31px;
+    position: relative;
+    @media (min-width: 768px) {
+      padding: 0;
+    }
+    .swiper {
+      // overflow: visible;
+      position: unset;
+    }
     .swiper-button-prev,
     .swiper-rtl .swiper-button-next {
-      left: 220px;
+      left: 14px;
       right: auto;
+      top: 45%;
+      color: #fff;
+      background-color: $red-color;
+      width: 38px;
+      height: 38px;
+      border-radius: 50%;
+      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23fff' viewBox='0 0 448 512'%3E%3C!--! Font Awesome Pro 6.1.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --%3E%3Cpath d='M447.1 256C447.1 273.7 433.7 288 416 288H109.3l105.4 105.4c12.5 12.5 12.5 32.75 0 45.25C208.4 444.9 200.2 448 192 448s-16.38-3.125-22.62-9.375l-160-160c-12.5-12.5-12.5-32.75 0-45.25l160-160c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25L109.3 224H416C433.7 224 447.1 238.3 447.1 256z' /%3E%3C/svg%3E%0A");
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: 23.25px 19.97px;
+      @media (min-width: 768px) {
+        left: 11%;
+        width: 64px;
+        height: 64px;
+        background-size: 24.67px 28.72px;
+      }
+      &::after {
+        content: "";
+      }
     }
     .swiper-button-next,
     .swiper-rtl .swiper-button-prev {
       left: auto;
-      right: 300px;
+      right: 14px;
+      color: #fff;
+      top: 45%;
+      background-color: $red-color;
+      width: 38px;
+      height: 38px;
+      border-radius: 50%;
+      background-image: url("data:image/svg+xml,%0A%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23fff' viewBox='0 0 448 512'%3E%3C!--! Font Awesome Pro 6.1.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --%3E%3Cpath d='M438.6 278.6l-160 160C272.4 444.9 264.2 448 256 448s-16.38-3.125-22.62-9.375c-12.5-12.5-12.5-32.75 0-45.25L338.8 288H32C14.33 288 .0016 273.7 .0016 256S14.33 224 32 224h306.8l-105.4-105.4c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0l160 160C451.1 245.9 451.1 266.1 438.6 278.6z'/%3E%3C/svg%3E");
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: 23.25px 19.97px;
+      @media (min-width: 768px) {
+        right: 11%;
+        width: 64px;
+        height: 64px;
+        background-size: 24.67px 28.72px;
+      }
+      &::after {
+        content: "";
+      }
     }
   }
 }
