Project scaffolding Optimized

--- a/src/components/Cards/InstagarmFeedCard/index.scss
+++ b/src/components/Cards/InstagarmFeedCard/index.scss
@@ -2,12 +2,13 @@
   cursor: pointer;
   margin-right: 10px;
   margin-bottom: 10px;
-  width: 86px;
-  height: 86px;
+  width: 100%;
+  height: 100%;
   border-radius: 14px;
   border: 1px solid #707070;
-  @media (min-width: 376px) {
-    width: 106px;
-    height: 106px;
+
+  @media (min-width: 1185px) {
+    width: 86px;
+    height: 86px;
   }
 }
