--- a/src/components/Footer/index.scss
+++ b/src/components/Footer/index.scss
@@ -18,6 +18,11 @@
       width: 273px;
       height: 58px;
       margin-bottom: 45px;
+      @media (min-width: 991px) {
+        max-width: 273px;
+        width: 100%;
+        height: 100%;
+      }
     }
     .footer-desc {
       font-size: 18px;
@@ -99,6 +104,8 @@
       // gap: 10px 10px;
       .single-card-wrapper {
         // max-width: 106px;
+        width: calc(33.33333333% - 10px);
+        margin: 5px;
       }
     }
   }
