added user login icon

--- a/src/components/FullNavBar/index.scss
+++ b/src/components/FullNavBar/index.scss
@@ -12,6 +12,10 @@
   @media (max-width: 1200px) {
     width: 90%;
   }
+  .user-dashboard {
+    font-size: 1.7rem;
+    cursor: pointer;
+  }
   .row {
     align-items: center;
     width: 100%;
