login modal optimized

--- a/src/components/FullNavBar/index.scss
+++ b/src/components/FullNavBar/index.scss
@@ -35,6 +35,7 @@
           margin: 0;
 
           li {
+            white-space: nowrap;
             font-size: 18px;
             font-weight: 400;
             cursor: pointer;
@@ -89,162 +90,4 @@
     outline: 0;
     background-color: unset;
   }
-  .modal-title {
-    color: $black-color;
-  }
-  .modal-body {
-    color: $black-color;
-    position: relative;
-    overflow-x: hidden;
-    padding: 1rem;
-    height: 700px;
-    .other-options {
-      width: 75%;
-      flex-direction: column;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      .login-with-fb,
-      .login-with-google {
-        border: 0;
-        outline: 0;
-        width: 100%;
-        height: 40px;
-        display: block;
-        margin: 15px 0;
-        color: #fff;
-        text-align: center;
-        line-height: 40px;
-        font-size: 14px;
-        opacity: 0.95;
-        border-radius: 3px;
-        -moz-border-radius: 3px;
-        -webkit-border-radius: 3px;
-      }
-
-      .login-with-fb:hover,
-      .login-with-google:hover {
-        opacity: 1;
-      }
-
-      .login-with-fb {
-        background: #527ebf;
-      }
-
-      .login-with-google {
-        background: $red-color;
-      }
-      .login-with-fb .icon,
-      .login-with-google .icon {
-        float: left;
-        font-size: 21px;
-        width: 50px;
-        height: 26px;
-        margin: 7px;
-        padding: 2px;
-        text-align: center;
-        border-right: 1px solid #fff;
-        position: relative;
-        &::before {
-          position: absolute;
-          top: -6px;
-          left: 6px;
-        }
-      }
-    }
-    .inputs_wrapper {
-      display: flex;
-      flex-direction: column;
-      input {
-        width: 100%;
-      }
-    }
-    .login-form {
-      transition: all 200ms ease-in-out;
-      width: 100%;
-      height: 100%;
-      position: absolute;
-      top: 0;
-      left: 0;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      h4 {
-        font-size: 1.5rem;
-        font-weight: bold;
-        margin: 0;
-        padding: 1rem;
-      }
-      form {
-        width: 80%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        padding: 1rem;
-        .input-wrapper {
-          margin-bottom: 1rem;
-          .form-control {
-            width: 100%;
-          }
-        }
-        span {
-          button {
-            border: 0;
-            outline: 0;
-            background-color: unset;
-            color: blue;
-          }
-        }
-      }
-    }
-    .register-form {
-      transition: all 200ms ease-in-out;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      width: 100%;
-      height: 100%;
-      position: absolute;
-      top: 0;
-      left: 0%;
-      .css-1okebmr-indicatorSeparator {
-        background-color: unset;
-      }
-      h4 {
-        font-size: 1.5rem;
-        font-weight: bold;
-        margin: 0;
-        padding: 1rem;
-      }
-      form {
-        width: 80%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        padding: 1rem;
-        .input-wrapper {
-          margin-bottom: 1rem;
-          .form-control {
-            width: 100%;
-          }
-        }
-        span {
-          padding: 1rem 0;
-          button {
-            border: 0;
-            outline: 0;
-            background-color: unset;
-            color: blue;
-          }
-        }
-      }
-    }
-  }
-}
-.input-error {
-  color: $red-color;
-  margin: 0%;
-  padding: 0;
-  font-size: 0.8rem;
 }
