--- a/src/components/CustomRadioButton2/index.scss
+++ b/src/components/CustomRadioButton2/index.scss
@@ -4,7 +4,7 @@
   gap: 10px;
   width: 100%;
   &__inputs {
-    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+    // box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
   }
   &__label {
     font-weight: bold;
