--- a/src/components/LoginModal/index.scss
+++ b/src/components/LoginModal/index.scss
@@ -1,8 +1,14 @@
 @import "../../styles/global.scss";
+.modal-content {
+  border-radius: 24px !important  ;
+}
 .modal-title {
   color: $black-color;
 }
 .modal-body {
+  &::-webkit-scrollbar {
+    display: none;
+  }
   color: $black-color;
   position: relative;
   overflow-x: hidden;
