--- a/src/UserDashboard/layouts/Gallery/index.scss
+++ b/src/UserDashboard/layouts/Gallery/index.scss
@@ -1,6 +1,81 @@
+@import "../../../styles/global.scss";
 .gallery {
   &__header {
     display: flex;
+    align-items: center;
     justify-content: space-between;
+  }
+  .upload-image-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    p {
+      color: $gray-color;
+      margin: 0;
+      padding-bottom: 1rem;
+    }
+    input {
+      outline: 0;
+      padding: 0.5rem;
+      margin-bottom: 1rem;
+    }
+  }
+}
+.AddImage {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+  background-color: $red-color;
+  padding: 18px 24px;
+  border-radius: 36px;
+  font-size: 16px;
+  color: $white-color;
+  font-weight: bold;
+  box-shadow: "0px 4px 10px rgba(20, 20 ,40, .04)";
+  transition: all 200ms ease-in-out;
+  &:hover {
+    background-color: $white-color;
+    color: $black-color;
+  }
+  i {
+    font-size: 1.2rem;
+  }
+}
+.imageGallery {
+  position: relative;
+  width: 100%;
+  max-width: 400px;
+  margin-bottom: 10px;
+  img {
+    width: 100%;
+  }
+  .edit-title {
+    border: 0;
+    outline: 0;
+    padding: 10px;
+    border-radius: 5px;
+    transition: all 200ms ease;
+    &:hover {
+      background-color: rgb(255, 187, 0);
+    }
+  }
+  .delete-btn {
+    border: 0;
+    outline: 0;
+    padding: 10px;
+    border-radius: 5px;
+    transition: all 200ms ease;
+    &:hover {
+      background-color: $red-color;
+    }
+  }
+  .actions {
+    position: absolute;
+    left: 5px;
+    bottom: 5px;
+    display: flex;
+    align-items: center;
+    gap: 5px;
   }
 }
