--- a/src/UserDashboard/layouts/Gallery/index.scss
+++ b/src/UserDashboard/layouts/Gallery/index.scss
@@ -20,6 +20,31 @@
       margin-bottom: 1rem;
     }
   }
+  &__body {
+    background-color: #fff;
+    padding: 2rem;
+    border-radius: 24px;
+    box-shadow: 0 2px 12px rgba($color: $black-color, $alpha: 8%);
+    .row {
+      .item-card {
+        margin: 0;
+        padding: 0;
+        margin-bottom: 1rem;
+        @media (min-width: 768px) {
+          margin: 5px;
+          max-width: 24%;
+        }
+        border-radius: 24px;
+        box-shadow: 0 2px 12px rgba($color: $black-color, $alpha: 8%);
+        .item-title {
+          font-size: 1.2rem;
+          padding: 1rem;
+          font-weight: bold;
+          color: $black-color;
+        }
+      }
+    }
+  }
 }
 .AddImage {
   display: flex;
@@ -46,9 +71,9 @@
   position: relative;
   width: 100%;
   max-width: 400px;
-  margin-bottom: 10px;
   img {
     width: 100%;
+    border-radius: 24px 24px 0 0;
   }
   .edit-title {
     border: 0;
@@ -56,6 +81,9 @@
     padding: 10px;
     border-radius: 5px;
     transition: all 200ms ease;
+    background-color: rgba(255, 255, 255, 0.6);
+    color: $black-color;
+    font-size: 0.85rem;
     &:hover {
       background-color: rgb(255, 187, 0);
     }
@@ -66,6 +94,9 @@
     padding: 10px;
     border-radius: 5px;
     transition: all 200ms ease;
+    background-color: rgba(255, 255, 255, 0.6);
+    color: $black-color;
+    font-size: 0.85rem;
     &:hover {
       background-color: $red-color;
     }
