--- a/src/UserDashboard/layouts/Gallery/index.scss
+++ b/src/UserDashboard/layouts/Gallery/index.scss
@@ -23,6 +23,7 @@
   &__body {
     background-color: #fff;
     padding: 2rem;
+    margin-top: 1rem;
     border-radius: 24px;
     box-shadow: 0 2px 12px rgba($color: $black-color, $alpha: 8%);
     .row {
@@ -109,4 +110,7 @@
     align-items: center;
     gap: 5px;
   }
+}
+.img-preview {
+  border-radius: 30px !important;
 }
