--- a/src/Screens/SingleHotel/index.scss
+++ b/src/Screens/SingleHotel/index.scss
@@ -8,19 +8,20 @@
   @import "styles/global.scss";
   .bloc-tabs {
     display: flex;
-    flex-direction: column;
-
+    // flex-direction: column;
+    margin-top: 50px;
     @media (min-width: 768px) {
       width: 90%;
       flex-direction: row;
       justify-content: center;
-      margin: 0 auto;
+      margin-left: auto;
+      margin-right: auto;
+      margin-top: 171px;
     }
   }
   .tabs {
-    padding: 15px;
+    width: 50%;
     text-align: center;
-    width: 100%;
     background: $white-color;
     cursor: pointer;
     border: 0;
@@ -29,13 +30,18 @@
     outline: none;
     color: $black-color;
     text-decoration: none;
-    font-size: 20px;
     font-weight: bold;
     display: flex;
     justify-content: center;
     gap: 5px;
     white-space: nowrap;
-    margin-top: 171px;
+    font-size: 0.7rem;
+    padding: 2px;
+    @media (min-width: 767px) {
+      width: 100%;
+      padding: 15px;
+      font-size: 20px;
+    }
     &:hover {
       color: $black-color;
     }
@@ -82,11 +88,19 @@
     border-radius: 30px;
     padding: 3.25rem !important;
     h2 {
-      font-size: 35px;
+      font-size: 22px;
       font-weight: bold;
     }
     p {
-      font-size: 22px;
+      font-size: 1rem;
+    }
+    @media (min-width: 768px) {
+      h2 {
+        font-size: 35px;
+      }
+      p {
+        font-size: 22px;
+      }
     }
   }
   .single-hotel-facalities {
@@ -95,18 +109,29 @@
     border-radius: 30px;
     padding: 3.25rem !important;
     h2 {
-      font-size: 35px;
+      font-size: 22px;
       font-weight: bold;
+    }
+    @media (min-width: 767px) {
+      h2 {
+        font-size: 35px;
+      }
     }
   }
   .single-hotel-room {
     color: $gray-color;
     border: 1px solid $gray-color;
     border-radius: 30px;
-    padding: 3.25rem !important;
+    padding: 2.25rem !important;
     h2 {
-      font-size: 35px;
+      font-size: 22px;
       font-weight: bold;
+    }
+    @media (min-width: 767px) {
+      padding: 3.25rem !important;
+      h2 {
+        font-size: 35px;
+      }
     }
   }
   .tag-tabs {
@@ -116,28 +141,41 @@
     gap: 10px;
     width: 80%;
     margin: 3.125rem auto;
+    flex-wrap: wrap;
     a {
       display: flex;
       justify-content: center;
       gap: 3px;
-      padding: 17px 30px;
       border: 1px solid #eeeeee;
-      font-size: 1rem;
       font-weight: bold;
       box-shadow: 0px 4px 10px rgba($color: #141428, $alpha: 4%);
       border-radius: 30px;
       text-decoration: none;
       color: $black-color;
+      white-space: nowrap;
+      padding: 10px 20px;
+      font-size: 0.7rem;
+      flex: 1 1 50px;
+      transition: all 200ms ease-in-out;
+      @media (min-width: 767px) {
+        padding: 13px 30px;
+        font-size: 1rem;
+      }
+
       &:hover {
-        color: $black-color;
+        background-color: $red-color;
+        color: $white-color;
       }
     }
   }
   .amenities__wrapper {
     color: $black-color;
-    font-size: 18px;
+    font-size: 1rem;
     font-weight: bold;
     padding-bottom: 10px;
+    @media (min-width: 767px) {
+      font-size: 18px;
+    }
     span {
       margin-left: 5px;
     }
@@ -148,7 +186,6 @@
     justify-content: center;
     align-items: center;
     font-weight: bold;
-
     color: $gray-color;
     div {
       display: flex;
@@ -157,10 +194,18 @@
       gap: 10px;
       i {
         color: $black-color;
-        font-size: 3.125rem;
+        font-size: 2rem;
       }
       span {
-        font-size: 1.875rem;
+        font-size: 1rem;
+      }
+      @media (min-width: 767px) {
+        i {
+          font-size: 3.125rem;
+        }
+        span {
+          font-size: 1.875rem;
+        }
       }
     }
   }
