--- a/src/Screens/SingleHotel/index.scss
+++ b/src/Screens/SingleHotel/index.scss
@@ -294,4 +294,36 @@
       line-height: 1.9;
     }
   }
+  .house__rules__wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    .house__rules {
+      display: flex;
+      flex-direction: column;
+      align-items: stretch;
+      width: 100%;
+      gap: 20px;
+      margin-top: 20px;
+      margin-bottom: 20px;
+      @media (min-width: 767px) {
+        flex-direction: row;
+        align-items: center;
+      }
+      span {
+        width: 30%;
+        white-space: nowrap;
+        font-weight: bold;
+      }
+      p {
+        width: 70%;
+        max-width: 500px;
+      }
+      .timebar-wrapper {
+        width: 70%;
+
+        max-width: 500px;
+      }
+    }
+  }
 }
