--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -8,6 +8,9 @@ body {
   -ms-user-select: none; /* IE 10 and IE 11 */
   user-select: none; /* Standard syntax */
 }
+p {
+  margin: 0;
+}
 
 .theme {
   height: 100vh;
