--- a/src/components/LoginModal/index.scss
+++ b/src/components/LoginModal/index.scss
@@ -160,6 +160,36 @@
         }
       }
     }
+    .reset-password-form {
+      transition: all 200ms ease-in-out;
+      background-color: #fff;
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      left: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      form {
+        width: 80%;
+        display: flex;
+        flex-direction: column;
+        align-items: stretch;
+        gap: 20px;
+        span {
+          // padding: 1rem 0;
+          text-align: center;
+          button {
+            border: 0;
+            outline: 0;
+            background-color: unset;
+            color: blue;
+          }
+        }
+      }
+    }
   }
   .input-error {
     color: $red-color;
