Add property image select created and modal refactored

--- a/src/components/Table/index.scss
+++ b/src/components/Table/index.scss
@@ -12,6 +12,8 @@
   border-radius: 5px;
   cursor: pointer;
   transition: all 200ms ease-in-out;
+  border: 0;
+  outline: 0;
   svg {
     width: 15px;
     height: 15px;
