--- a/src/UserDashboard/layouts/Gallery/index.scss
+++ b/src/UserDashboard/layouts/Gallery/index.scss
@@ -47,14 +47,14 @@
     }
   }
 }
-
 .imageGallery {
   position: relative;
-  width: 100%;
-  max-width: 400px;
+  height: 250px;
   img {
+    height: 100%;
     width: 100%;
     border-radius: 24px 24px 0 0;
+    margin-bottom: 20px;
   }
   .edit-title {
     border: 0;
