--- a/src/UserDashboard/layouts/Property/index.scss
+++ b/src/UserDashboard/layouts/Property/index.scss
@@ -4,5 +4,9 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    h2 {
+      margin: 0;
+    }
   }
 }
