--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -28,3 +28,20 @@ $box-shadow: 0 2px 12px
     $color: $black-color,
     $alpha: 8%,
   );
+.btn-main {
+  background-color: $red-color;
+  color: $white-color;
+  padding: 18px 24px;
+  border-radius: 36px;
+  font-size: 16px;
+  font-weight: bold;
+  box-shadow: "0px 4px 10px rgba(20, 20 ,40, .04)";
+  transition: all 200ms ease-in-out;
+  &:hover {
+    background-color: $white-color;
+    color: $black-color;
+  }
+}
+.css-1ioqvny-MuiPaper-root-MuiDrawer-paper {
+  z-index: 1039 !important;
+}
